[package]
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
description = "A pure Rust implementation for the BME680 environmental sensor."
documentation = "https://docs.rs/bme680"
license = "MIT"
name = "bme680"
repository = "https://github.com/marcelbuesing/bme680-hal"
version = "0.6.0"
edition = "2021"

[badges]
travis-ci = { repository = "https://github.com/marcelbuesing/bme680-hal", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.2"
embedded-hal = "=1.0.0-alpha.10"
log = "0.4"

[dev-dependencies]

cortex-m = "0.7"
cortex-m-rt = "0.7"
rp-pico = "0.7"
rp2040-hal = {version = "0.8.2", features = ["eh1_0_alpha"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fugit = "0.3.6"
